infrastructure/configs/base/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend-ingress
spec:
  rules:
    - host: longhorn.homelab.box
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
